<resources>
    <string name="app_name" translatable="false">ImpressMap</string>

    <string name="check_internet_connection">"Check your Internet connection"</string>
    <string name="user_does_not_exist">This user does not exist</string>
    <string name="field_is_necessary">Field is necessary</string>
    <string name="max_addresses_count">Max addresses count!</string>
    <string name="not_stated">Not stated</string>
    <string name="addresses_count">"Addresses"</string>
    <string name="selected_addresses_count">"%1$d selected"</string>
    <string name="comments">Comments</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_phone_number">Edit phone number</string>
    <string name="addresses">Addresses</string>
    <string name="comment">Comment</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="location_permission">Geolocation is disabled. Location permission required is enabled in settings</string>
    <string name="location_loading">Loading…</string>
    <string name="today">Today at %1$s</string>
    <string name="ago">%1$s ago</string>

    <plurals name="days">
        <item quantity="one">%1$d day</item>
        <item quantity="many">%1$d days</item>
        <item quantity="other">%1$d days</item>
    </plurals>

    <!--  creator address fragment -->
    <string name="create_address">Create address</string>
    <string name="addresses_in_this_location">Addresses in this location</string>
    <string name="no_address_selected">No address selected</string>

    <!--  nav drawer item titles  -->
    <string name="menu_profile">Profile</string>
    <string name="menu_addresses">Addresses</string>
    <string name="menu_join_address">Join To Address</string>

    <!--  auth fragment  -->
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="dont_logout_check_box">Don\'t logout</string>

    <!--  creator marker fragment  -->
    <string name="create_marker">Create marker</string>
    <string name="marker_title_hint">Title</string>
    <string name="marker_text_hint">Text</string>

    <string name="address_desc_hint">Description</string>

    <!--  comments fragment  -->
    <string name="write_some_words">Write some words…</string>
    <string name="reply">Reply</string>
    <string name="show_comments_branch">Show comments branch</string>
    <string name="message_is_empty">Message is empty</string>

    <!--  profile fragment  -->
    <string name="phone_number_sub">Your phone number</string>
    <string name="nickname_sub">Your nickname</string>
    <string name="title_bio">About yourself</string>
    <string name="desc_bio_sub">Write a few words about yourself</string>
    <string name="title_addresses">Your addresses</string>
    <string name="desc_addresses_sub">Tap to change your shown addresses</string>
    <string name="email_sub">Your email</string>

    <string name="phone_number_not_set"><i>Phone number not set</i></string>

    <string name="comments_count" translatable="false">200</string>
</resources>