<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?backgroundPrimaryWindow"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="2dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextColor="?colorToolbarTitle"
                app:contentScrim="?backgroundToolbar"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleTextColor="?colorToolbarTitle"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="@null"
                app:toolbarId="@id/toolbar">

                <ImageView
                    android:id="@+id/avatar_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sample_avatar"
                    app:layout_collapseMode="parallax" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    style="@style/toolbarTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/menu_profile"
                    app:navigationIcon="@drawable/ic_arrow"
                    app:popupTheme="@style/Theme.ImpressMap.PopupOverlay"
                    tools:title="@tools:sample/full_names" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?backgroundSecondaryWindow"
                android:orientation="vertical"
                android:paddingTop="@dimen/vertical_medium_margin">

                <LinearLayout
                    android:id="@+id/settings_phone_number_view"
                    style="@style/settingsItemStyle">

                    <TextView
                        android:id="@+id/phone_number_view"
                        style="@style/settingsItemHeaderTextStyle"
                        tools:text="+78005553535" />

                    <TextView
                        style="@style/settingsItemSubheaderTextStyle"
                        android:text="@string/phone_number_sub" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/settings_nickname_view"
                    style="@style/settingsItemStyle">

                    <TextView
                        android:id="@+id/nickname_view"
                        style="@style/settingsItemHeaderTextStyle"
                        tools:text="\@abobus" />

                    <TextView
                        style="@style/settingsItemSubheaderTextStyle"
                        android:text="@string/nickname_sub" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/settings_bio_view"
                    style="@style/settingsItemStyle">

                    <TextView
                        style="@style/settingsItemHeaderTextStyle"
                        android:text="@string/title_bio" />

                    <TextView
                        style="@style/settingsItemSubheaderTextStyle"
                        android:text="@string/desc_bio_sub" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/settings_addresses_view"
                    style="@style/settingsItemStyle">

                    <TextView
                        style="@style/settingsItemHeaderTextStyle"
                        android:text="@string/title_addresses" />

                    <TextView
                        style="@style/settingsItemSubheaderTextStyle"
                        android:text="@string/desc_addresses_sub" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_profile_fab"
            style="@style/fabStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/vertical_margin"
            app:backgroundTint="?backgroundPrimaryFab"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_edit"
            app:tint="?colorPrimaryFabIcon" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>